--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ DEBUG=True
 SECRET_KEY=your-secret-key
 
 # تنظیمات دیتابیس
-DATABASE_URL=sqlite:///./twitter_analysis.db
+DATABASE_URL=sqlite:///./hooshyar.db
 
 # تنظیمات Twitter API
 TWITTER_API_KEY=your-twitter-api-key
