--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 fastapi==0.100.0
 uvicorn==0.22.0
-sqlalchemy = "==2.0.21"
+sqlalchemy==2.0.21
 pydantic==2.0.0
 aiohttp==3.8.5
 python-dotenv==1.0.0
@@ -8,7 +8,7 @@ pyyaml==6.0
 alembic==1.11.1
 httpx==0.24.1
 asyncio==3.4.3
-anthropic = "==0.5.0"
+anthropic==0.5.0
 apscheduler==3.10.1
 jinja2==3.1.2
 pandas==2.0.3
@@ -16,3 +16,4 @@ pytest==7.4.0
 pytest-asyncio==0.21.1
 aiosqlite==0.19.0
 asyncpg==0.28.0
+itsdangerous==2.1.2      # وابستگی ضروری برای Starlette sessions
