--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ anthropic==0.5.0
 apscheduler==3.10.1
 jinja2==3.1.2
 pandas==2.0.3
+pydantic-settings>=2.0.0  
 pytest==7.4.0
 pytest-asyncio==0.21.1
 aiosqlite==0.19.0
